--- a/package.json
+++ b/package.json
@@ -81,5 +81,9 @@
   "lint-staged": {
     "*.js": "eslint --cache --fix",
     "*.{html,json,md,yml}": "prettier --write"
+  },
+  "engines": {
+    "npm": "6.14.14",
+    "node": "14.17.4"
   }
 }
