--- a/package.json
+++ b/package.json
@@ -38,13 +38,9 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "css-loader": "^6.7.1",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1",
     "@square/prettier-config": "^1.0.0",
     "ava": "^3.15.0",
+    "css-loader": "^6.7.1",
     "eslint": "^7.22.0",
     "eslint-plugin-ava": "^11.0.0",
     "eslint-plugin-prettier": "^3.3.1",
@@ -52,12 +48,17 @@
     "husky": "^4.3.8",
     "lint-staged": "^11.0.1",
     "micro-dev": "^3.0.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.14",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "prettier": "^2.2.1",
-    "test-listen": "^1.1.0"
+    "style-loader": "^3.3.1",
+    "test-listen": "^1.1.0",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   },
   "prettier": "@square/prettier-config",
   "eslintConfig": {
