--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "debug": "^4.3.4",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "fs": "0.0.1-security",
+    "https": "^1.0.0",
     "micro": "^9.3.4",
     "micro-dev": "^3.0.0",
     "microrouter": "^3.1.3",
